--- a/client/js/directive/queryBuilderDirective.html
+++ b/client/js/directive/queryBuilderDirective.html
@@ -13,7 +13,7 @@
                 </div>
                 <div ng-switch-default="ng-switch-default">
                     <div class="form-inline">
-                        <select ng-options="t as t.name for t in fields" ng-model="rule.field" class="form-control input-sm"></select>
+                        <select ng-options="t as t.name for t in fields track by t.name" ng-model="rule.field" class="form-control input-sm"></select>
                         <select style="margin-left: 5px" ng-options="c.name as c.name for c in conditions" ng-model="rule.condition" class="form-control input-sm"></select>
                         <select ng-if="rule.field.type == 'bool'" style="margin-left: 5px" type="text" ng-model="rule.data" class="form-control input-sm"/>
                           <option value ="1"> OK </option>
