--- a/client/widgets/pieChart/src/edit/edit.html
+++ b/client/widgets/pieChart/src/edit/edit.html
@@ -24,6 +24,8 @@
     <input type="text" id="desc" class="form-control" ng-model="config.desc" placeholder="Description">
   </div>
 
+  <input id=listener type="checkbox" ng-model="config.listener"> <label for=listener> Slave </label>
+
   <div>
     <label> Label </label>
   </div>
@@ -55,7 +57,7 @@
     </select>
   </div>
 
-  <div>
+  <!-- <div>
     <label ng-click="isCollapsed = !isCollapsed"> Chart Option
       <span ng-hide="isCollapsed" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
       <span ng-show="isCollapsed" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
@@ -66,10 +68,10 @@
     <div>
       <label> Ok </label>
     </div>
-  </div>
+  </div> -->
 
   <div>
-    <input type="checkbox" ng-model="expert"> Expert Mode
+    <input id=cbe type="checkbox" ng-model="expert"> <label for=cbe>Expert Mode</label>
   </div>
 
   <div ng-show="expert">
