--- a/client/index.html
+++ b/client/index.html
@@ -99,6 +99,7 @@
     <script type="text/javascript" src="js/directive/accessLevel.js"></script>
     <script type="text/javascript" src="js/directive/querybuilder.js"></script>
     <script type="text/javascript" src="js/directive/selectTree.js"></script>
+    <script type="text/javascript" src="js/directive/modalTable.js"></script>
 
 
 
@@ -114,7 +115,7 @@
     <script type="text/javascript" src="/widgets/singleValue/dist/adf-widget-singleValue.min.js"></script>
 
     <!-- pieChart -->
-    <script type="text/javascript" src="/widgets/pieChart/dist/adf-widget-pieChart.min.js"></script>
+    <script type="text/javascript" src="/widgets/pieChart/dist/adf-widget-pieChart.js"></script>
 
     <!-- lineChart -->
     <script type="text/javascript" src="/widgets/lineChart/dist/adf-widget-lineChart.min.js"></script>
@@ -123,10 +124,10 @@
     <script type="text/javascript" src="/widgets/checkValue/dist/adf-widget-checkValue.min.js"></script>
 
     <!-- Check Standard -->
-    <script type="text/javascript" src="/widgets/checkStandard/dist/adf-widget-checkStandard.js"></script>
+    <script type="text/javascript" src="/widgets/checkStandard/dist/adf-widget-checkStandard.min.js"></script>
 
     <!-- paginateTable -->
-    <script type="text/javascript" src="/widgets/paginateTable/dist/adf-widget-paginateTable.js"></script>
+    <script type="text/javascript" src="/widgets/paginateTable/dist/adf-widget-paginateTable.min.js"></script>
 
 
     <!-- Markdown -->
