--- a/client/widgets/checkStandard/src/edit/edit.html
+++ b/client/widgets/checkStandard/src/edit/edit.html
@@ -13,16 +13,45 @@
 
 <form role="form">
 
-  <div class="form-group">
-    <label for="sample"> Datasources</label>
-    <input id="sample" type="text" class="form-control" ng-model="config.databaseStandard" placeholder="Type du Check" autocomplete="off" uib-typeahead="database for database in cs.getDatabase($viewValue)" typeahead-min-length='0' typeahead-on-select="cs.getColumns(config.database)">
+  <hr>
+
+  <input type="radio" ng-model="config.mode" value="std" id=std> <label for=std> Mode Standard </label>
+  <input type="radio" ng-model="config.mode" value="exp" id=exp> <label for=exp> Mode Expert </label>
+
+  <div ng-if="config.mode == 'std'">
+    <div class="form-group">
+      <label for="sample"> Datasources</label>
+      <input id="sample" type="text" class="form-control" ng-model="config.databaseStandard" placeholder="Type du Check" autocomplete="off" uib-typeahead="database for database in cs.getDatabase($viewValue)" typeahead-min-length='0' typeahead-on-select="cs.getColumns(config.databaseStandard)">
+    </div>
+
+    <div class="form-group">
+      <label for="standardTest"> Test </label>
+    </div>
+
+    <p ng-hide="config.principalCol.length"> Choissisez une datasource ! </p>
+
+    <div ng-if="config.principalCol.length">
+      <label> <small> REF </small> </label>
+      <query-builder  group="config.condition.group" fields="config.principalCol" database="config.databaseStandard"></query-builder>
+    </div>
+    <div ng-if="config.condition.group.rules[0] && config.condition.group.rules[0].data">
+      <label> <small> SEC </small></label>
+      <query-builder  group="config.condition2.group" fields="config.otherCol" database="config.databaseStandard"></query-builder>
+    </div>
   </div>
 
-  <div class="form-group">
-    <label for="standardTest"> Test </label>
+  <div ng-if="config.mode == 'exp'">
+    <div class="form-group">
+      <label class="sr-only" for="database"> Database </label>
+      <input type="text" id="database" class="form-control" placeholder="Database" ng-model="config.database" uib-typeahead=" database for database in cs.getDatabaseExpert($viewValue)" typeahead-min-length='0'>
+    </div>
+    <div class="form-group">
+      <label class="sr-only" for="query">Query</label>
+      <textarea rows="3" id="query" class="form-control" placeholder="Query" ng-model="config.expert"></textarea>
+    </div>
   </div>
 
-  <query-builder ng-if="config.colDatabase" group="config.condition.group" fields="config.colDatabase"></query-builder>
+  <hr>
 
   <div class=form-group>
     <label> Seuil </label>
@@ -30,6 +59,7 @@
 
   <div class="form-inline padding-bottom">
     <select ng-model="config.seuil.op" class="form-control">
+      <option value="=" selected="selected"> Egal </option>
       <option value=">"> Superieur </option>
       <option value="<"> Inferieur </option>
     </select>
@@ -45,7 +75,7 @@
 
   <div ng-show="isCollapsed">
 
-    <p> Ce tableau s'affiche lorsque vous cliquer sur le widget, la première configuration est automatique </p>
+    <p> Ce tableau s'affiche lorsque vous cliquer sur le widget, il contient des informations plus détaillé sur le résultat du check. La première configuration est automatique </p>
 
       <div>
         <label>Column</label>
@@ -68,23 +98,6 @@
       <button type="button" class="btn btn-primary" ng-click="cs.addColumn(false)">
         <i class="fa fa-plus"></i> Add
       </button>
-  </div>
-
-  <!-- MODE EXPERT -->
-
-  <div>
-    <input id="cbe" type="checkbox" ng-model="expert"> <label for="cbe" > Expert Mode </label>
-  </div>
-
-  <div ng-show="expert">
-    <div class="form-group">
-      <label class="sr-only" for="database"> Database </label>
-      <input type="text" id="database" class="form-control" placeholder="Database" ng-model="config.database" uib-typeahead=" database for database in cs.getDatabaseExpert($viewValue)" typeahead-min-length='0'>
-    </div>
-    <div class="form-group">
-      <label class="sr-only" for="query">Query</label>
-      <textarea rows="3" id="query" class="form-control" placeholder="Query" ng-model="config.expert"></textarea>
-    </div>
   </div>
 
 </form>
