--- a/client/widgets/pieChart/src/edit/edit.html
+++ b/client/widgets/pieChart/src/edit/edit.html
@@ -43,18 +43,18 @@
     </div>
 
     <div class="form-group">
-      <label for="sample"> Colonne -> Label</label>
+      <label for="sample"> Label</label>
       <input id="sample" type="text" class="form-control" ng-model="config.columnStandard" placeholder="" autocomplete="off" uib-typeahead="col as col.name for col in graph.column" typeahead-min-length='0'>
     </div>
 
     <div class="form-group">
-      <label for="standardTest"> Test </label>
+      <label for="standardTest"> Condition :  </label>
     </div>
 
     <p ng-hide="config.principalCol.length"> Choissisez une datasource ! </p>
 
     <div ng-if="config.principalCol.length">
-      <label> <small> REF </small> </label>
+      <label> <small> Choix de la Référence </small> </label>
       <query-builder  group="config.condition.group" fields="config.principalCol" database="config.databaseStandard"></query-builder>
     </div>
     <div ng-if="config.condition.group.rules[0] && config.condition.group.rules[0].data">
@@ -67,14 +67,7 @@
   <!-- Mode Expert -->
 
   <div ng-if="config.mode == 'exp'">
-    <div class="form-group">
-      <label class="sr-only" for="database"> Database </label>
-      <input type="text" id="database" class="form-control" placeholder="Database" ng-model="config.database" uib-typeahead=" database for database in graph.getDatabaseExpert($viewValue)" typeahead-min-length='0'>
-    </div>
-    <div class="form-group">
-      <label class="sr-only" for="query">Query</label>
-      <textarea rows="3" id="query" class="form-control" placeholder="Query" ng-model="config.expert"></textarea>
-    </div>
+    <expert-mode config=config></expert-mode>
   </div>
 
   <hr>
@@ -99,7 +92,7 @@
   </div>
 
   <div>
-    <label> Label </label>
+    <label> Label (Configuration Automatique) </label>
   </div>
 
   <div class="form-group">
@@ -108,7 +101,7 @@
   </div>
 
   <div>
-    <label> Value </label>
+    <label> Value (Configuration Automatique)</label>
   </div>
 
   <div class="form-group">
@@ -116,7 +109,7 @@
     <input type="text" id="value" class="form-control" ng-model="config.value" placeholder="Données" uib-typeahead="key for key in config.key" typeahead-min-length='0' autocomplete="off">
   </div>
 
-  <!-- <div>
+  <div>
     <label ng-click="isCollapsed = !isCollapsed"> Chart Option
       <span ng-hide="isCollapsed" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
       <span ng-show="isCollapsed" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
@@ -125,8 +118,20 @@
 
   <div ng-show="isCollapsed">
     <div>
-      <label> Ok </label>
+      <input type="checkbox" ng-model="config.legend" id="legend"></input>
+      <label for="legend"> Legende </label>
     </div>
-  </div> -->
+
+    <div>
+      <label> Position de la Legende </label>
+    </div>
+    <select ng-model=config.legendPosition>
+      <option value="top" selected="selected"> Haut </option>
+      <option value="bottom"> Bas </option>
+      <option value="left"> Gauche </option>
+      <option value="right"> Droite </option>
+    </select>
+
+  </div>
 
 </form>
