--- a/client/widgets/paginateTable/src/edit/edit.html
+++ b/client/widgets/paginateTable/src/edit/edit.html
@@ -9,15 +9,59 @@
 <input type="checkbox" ng-model="config.master"> <label> Master </label>
 
 <form role="form">
-  <div>
+  <!-- <div>
     <label for="sample">Datasource</label>
     <div ng-show="config.url" class="alert alert-info text-center"> {{pt.config.url}} </div>
     <selecttree model="pt.config.datasource"></selecttree>
+  </div> -->
+
+  <hr>
+
+  <input type="radio" ng-model="config.mode" value="easy" id=easy> <label for=easy> Mode Facile </label>
+  <input type="radio" ng-model="config.mode" value="std" id=std> <label for=std> Mode Standard </label>
+  <input type="radio" ng-model="config.mode" value="exp" id=exp> <label for=exp> Mode Expert </label>
+
+  <!-- Mode easy -->
+
+  <div class="form-group" ng-if="config.mode == 'easy'">
+    <easy-mode config=config><easy-mode>
   </div>
 
-  <div>
-    <label>Columns</label>
+  <div class="form-group" ng-if="config.mode == 'std'">
+    <div class="form-group">
+      <label for="sample"> Datasources</label>
+      <input id="sample" type="text" class="form-control" ng-model="config.databaseStandard" placeholder="Type du Check" autocomplete="off" uib-typeahead="database for database in pt.getDatabase($viewValue)" typeahead-min-length='0' typeahead-on-select="pt.getStandardColumns(config.databaseStandard)">
+    </div>
+
+    <div class="form-group">
+      <label for="standardTest"> Condition :  </label>
+    </div>
+
+    <p ng-hide="config.principalCol.length"> Choissisez une datasource ! </p>
+
+    <div ng-if="config.principalCol.length">
+      <label> <small> Choix de la Référence </small> </label>
+      <query-builder  group="config.condition.group" fields="config.principalCol" database="config.databaseStandard"></query-builder>
+    </div>
+    <div ng-if="config.condition.group.rules[0] && config.condition.group.rules[0].data">
+      <label> <small> SEC </small></label>
+      <query-builder  group="config.condition2.group" fields="config.otherCol" database="config.databaseStandard"></query-builder>
+    </div>
+
   </div>
+
+
+  <div ng-if="config.mode == 'exp'">
+    <expert-mode config=config></expert-mode>
+  </div>
+
+  <hr>
+
+  <div>
+    <label>Colonne </label>
+  </div>
+
+  <p> Première configuration automatique </p>
 
   <div class="form-inline padding-bottom" ng-repeat="col in pt.config.columns">
     <div class="form-group">
@@ -93,19 +137,5 @@
   </div>
 
 
-  <div>
-    <input type="checkbox" ng-model="expert"> Expert Mode
-  </div>
-
-  <div ng-show="expert">
-    <div class="form-group">
-      <label class="sr-only" for="database"> Database </label>
-      <input type="text" id="database" class="form-control" placeholder="Database" ng-model="config.database" uib-typeahead=" database for database in pt.getDatabase($viewValue)" typeahead-min-length='0'>
-    </div>
-    <div class="form-group">
-      <label class="sr-only" for="query">Query</label>
-      <textarea rows="3" id="query" class="form-control" placeholder="Query" ng-model="config.expert"></textarea>
-    </div>
-  </div>
 
 </form>
