update graph export

--- a/client/widgets/lineChart/src/edit/edit.html
+++ b/client/widgets/lineChart/src/edit/edit.html
@@ -9,22 +9,68 @@
 
 
 <form role="form">
+
   <div class="form-group">
-    <label for="sample">Datasource</label>
-    <div ng-show="config.url" class="alert alert-info text-center"> {{config.url}} </div>
-    <selecttree model="config.dataSource"></selecttree>
+    <label class="sr-only" for="desc">Description</label>
+    <input type="text" id="desc" class="form-control" ng-model="config.desc" placeholder="Enter Description of the data">
   </div>
+
+  <hr>
+
+  <input type="radio" ng-model="config.mode" value="easy" id=easy> <label for=easy> Mode Facile </label>
+  <input type="radio" ng-model="config.mode" value="std" id=std> <label for=std> Mode Standard </label>
+  <input type="radio" ng-model="config.mode" value="exp" id=exp> <label for=exp> Mode Expert </label>
+
+  <!-- Mode easy -->
+
+  <div class="form-group" ng-if="config.mode == 'easy'">
+    <easy-mode config=config><easy-mode>
+  </div>
+
+
+  <!-- Mode Standard -->
+
+  <div class="form-group" ng-if="config.mode == 'std'">
+    <div class="form-group">
+      <label for="sample"> Datasources</label>
+      <input id="sample" type="text" class="form-control" ng-model="config.databaseStandard" placeholder="Type du Check" autocomplete="off" uib-typeahead="database for database in graph.getDatabase($viewValue)" typeahead-min-length='0' typeahead-on-select="graph.getColumns(config.databaseStandard)">
+    </div>
+
+    <div class="form-group">
+      <label for="sample"> Label</label>
+      <input id="sample" type="text" class="form-control" ng-model="config.columnStandard" placeholder="" autocomplete="off" uib-typeahead="col as col.name for col in graph.column" typeahead-min-length='0'>
+    </div>
+
+    <div class="form-group">
+      <label for="standardTest"> Condition :  </label>
+    </div>
+
+    <p ng-hide="config.principalCol.length"> Choissisez une datasource ! </p>
+
+    <div ng-if="config.principalCol.length">
+      <label> <small> Choix de la Référence </small> </label>
+      <query-builder  group="config.condition.group" fields="config.principalCol" database="config.databaseStandard"></query-builder>
+    </div>
+    <div ng-if="config.condition.group.rules[0] && config.condition.group.rules[0].data">
+      <label> <small> SEC </small></label>
+      <query-builder  group="config.condition2.group" fields="config.otherCol" database="config.databaseStandard"></query-builder>
+    </div>
+
+  </div>
+
+  <!-- Mode Expert -->
+
+  <div ng-if="config.mode == 'exp'">
+    <expert-mode config=config></expert-mode>
+  </div>
+
+  <hr>
 
   <input type="checkbox" ng-model="config.listener"> <label> Slave </label>
 
 
   <div>
     <label> Graph </label>
-  </div>
-
-  <div class="form-group">
-    <label class="sr-only" for="desc">Description</label>
-    <input type="text" id="desc" class="form-control" ng-model="config.desc" placeholder="Enter Description of the data">
   </div>
 
   <div>
@@ -68,16 +114,4 @@
   <div>
     <input type="checkbox" ng-model="expert"> Expert Mode
   </div>
-
-  <div ng-show="expert">
-    <div class="form-group">
-      <label class="sr-only" for="database"> Database </label>
-      <input type="text" id="database" class="form-control" placeholder="Database" ng-model="config.database" uib-typeahead=" database for database in graph.getDatabase($viewValue)" typeahead-min-length='0'>
-    </div>
-    <div class="form-group">
-      <label class="sr-only" for="query">Query</label>
-      <textarea id="query" class="form-control" rows="5" placeholder="Query" ng-model="config.expert"></textarea>
-    </div>
-  </div>
-
 </form>
