change template LC

--- a/client/widgets/lineChart/src/edit/edit.html
+++ b/client/widgets/lineChart/src/edit/edit.html
@@ -124,13 +124,13 @@
 
     <input type=checkbox ng-model=config.noPoint ><label> No point </label>
     <div>
+      <label for="color"> Couleur Value 1 : </label>
       <input type="color" ng-model="config.color" id="color"></input>
-      <label for="color"> Couleur Value 1 </label>
     </div>
 
     <div ng-if="config.value2">
+      <label for="color2"> Couleur Value 2 : </label>
       <input type="color" ng-model="config.color2" id="color2"></input>
-      <label for="color2"> Couleur Value 2 </label>
     </div>
 
   </div>
