--- a/client/widgets/lineChart/src/edit/edit.html
+++ b/client/widgets/lineChart/src/edit/edit.html
@@ -123,15 +123,35 @@
   <div ng-show="isCollapsed">
 
     <input type=checkbox ng-model=config.noPoint ><label> No point </label>
-    <div>
-      <label for="color"> Couleur Value 1 : </label>
-      <input type="color" ng-model="config.color" id="color"></input>
+
+    <div class="row">
+      <div class="col-md-6">
+        <label for="color"> Couleur Value 1 : </label>
+        <input type="color" ng-model="config.color" id="color"></input>
+      </div>
+
+      <div ng-if="config.value2" class="col-md-6">
+        <label for="color2"> Couleur Value 2 : </label>
+        <input type="color" ng-model="config.color2" id="color2"></input>
+      </div>
     </div>
 
-    <div ng-if="config.value2">
-      <label for="color2"> Couleur Value 2 : </label>
-      <input type="color" ng-model="config.color2" id="color2"></input>
+    <div class=row>
+      <div class=col-md-6>
+        <label for=min> Valeur Minimum </label>
+        <input type=text id=min ng-model=config.minValue>
+      </div>
+      <div class=col-md-6>
+        <label for=max> Valeur Maximum </label>
+        <input type=text id=max ng-model=config.maxValue>
+      </div>
     </div>
+
+      <label for=step> Step </label>
+      <input type=text id=step ng-model=config.step>
+
+
+
 
   </div>
 
