--- a/client/widgets/paginateTable/src/edit/edit.html
+++ b/client/widgets/paginateTable/src/edit/edit.html
@@ -46,7 +46,7 @@
       <query-builder  group="config.condition.group" fields="config.principalCol" database="config.databaseStandard"></query-builder>
     </div>
     <div ng-if="config.condition.group.rules[0] && config.condition.group.rules[0].data">
-      <label> <small> SEC </small></label>
+      <label> <small> Conditions Optionnelles </small></label>
       <query-builder  group="config.condition2.group" fields="config.otherCol" database="config.databaseStandard"></query-builder>
     </div>
 
@@ -79,16 +79,20 @@
         <i class="fa fa-minus"></i> Remove
       </button>
     </div>
-    <div class="form-inline padding-bottom">
+    <div class="form-inline padding-bottom" ng-init="col.opt = {}">
       <label for="opt-{{$index}}">Booléen</label>
-      <input type="radio" id="opt-{{$index}}" class="" ng-model="col.opt" value="bool">
+      <input type="radio" id="opt-{{$index}}" class="" ng-model="col.opt.type" value="bool">
 
       <label for="opt2-{{$index}}">Seuil</label>
-      <input type="radio" id="opt2-{{$index}}" class="" ng-model="col.opt" value="seuil">
+      <input type="radio" id="opt2-{{$index}}" class="" ng-model="col.opt.type" value="seuil">
     </div>
 
-    <div ng-if="col.opt == 'seuil'">
-      <p> En DEV </p>
+    <div class="form-inline padding-bottom" ng-if="col.opt.type == 'seuil'">
+      <select ng-model=col.opt.seuilOp>
+        <option value="Sup"> Sup </option>
+        <option value="Inf"> Inf </option>
+      </select>
+      <input type=text ng-model=col.opt.seuilVal>
     </div>
   </div>
 
