--- a/client/widgets/pieChart/src/edit/edit.html
+++ b/client/widgets/pieChart/src/edit/edit.html
@@ -74,7 +74,11 @@
     <label> Configuration du Graph </label>
   </div>
 
-  <input ng-if="config.mode == 'easy' || 'expert'" id=listener type="checkbox" ng-model="config.listener"> <label ng-if="config.mode == 'easy'" for=listener> Slave </label>
+  <input ng-if="config.mode == 'easy' || 'expert'" id=listener type="checkbox" ng-model="config.listener"> <label ng-if="config.mode == 'easy' || 'expert'" for=listener> Slave </label>
+  <div ng-if=config.listener>
+    <label>Master Column </label>
+    <input type="text" ng-model="config.slaveValue">
+  </div>
 
   <div>
     <label> Type de Graph </label>
@@ -139,6 +143,13 @@
     <div>
       <input type="checkbox" ng-model="config.pieValue" id="pieValue"></input>
       <label for="pieValue"> Afficher la valeur sur le Graph </label>
+    </div>
+
+    <label> Choix des Couleurs </label>
+
+    <div ng-if="config.colorLabel" ng-repeat="l in config.colorLabel">
+      <label> {{l}} </label>
+      <input type="color" ng-model=config.color[$index]>
     </div>
 
     <!-- <div>
