--- a/client/widgets/checkValue/src/edit/edit.html
+++ b/client/widgets/checkValue/src/edit/edit.html
@@ -7,63 +7,74 @@
 </script>
 
 
-
 <form role="form">
 
-  <div class="form-group">
-    <label for="tooltip">Description</label>
-    <input id="tooltip" type="text" class="form-control" ng-model="config.tooltip" placeholder="Tooltips">
+  <input type="radio" ng-model="config.mode" value="easy" id=std> <label for=std> Mode Facile </label>
+  <input type="radio" ng-model="config.mode" value="exp" id=exp> <label for=exp> Mode Expert </label>
+
+  <div class="form-group" ng-if="config.mode == 'easy'">
+    <easy-mode config=config><easy-mode>
   </div>
 
-  <div class="form-group">
-    <label for="sample">Datasource</label>
-    <input type="text" class="form-control" ng-model="config.url" ng-blur="cv.load()" placeholder="Enter url" uib-typeahead="address.url as address.url for address in getAutocompletion($viewValue) " typeahead-template-url="autocomplete.html" typeahead-loading="load" typeahead-no-result="noResults">
+  <div ng-if="config.mode == 'exp'">
+    <expert-mode config=config></expert-mode>
+  </div>
+
+
+    <div>
+      <label> Donnée Principal </label>
+    </div>
+
+    <div>
+      <div class="form-group">
+        <label for="tooltip">Description</label>
+        <input id="tooltip" type="text" class="form-control" ng-model="config.desc" placeholder="Tooltips">
+      </div>
+      <div class="form-group">
+        <label class="sr-only" for="sample">Donnée</label>
+        <input type="text" class="form-control" ng-model="config.root" placeholder="Enter name of principal data" uib-typeahead ="key for key in config.keys" typeahead-min-length=0 autocomplete="off">
+      </div>
+    </div>
+
+    <div>
+      <label> Test </label>
+    </div>
+
+    <div class="form-inline padding-bottom">
+      <div class="form-group">
+        <label class="sr-only" for="op"> Operation </label>
+        <select class="form-group" id="op" ng-model="config.op" required="">
+          <option value="eq"> == </option>
+          <option value="sup"> > </option>
+          <option value="inf"> < </option>
+          <option value="dif"> != </option>
+          <option value="not"> not </option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label class="sr-only" for ="test"> Value </label>
+        <input type="text" id="test" class="form-control" placeholder="Test Value" ng-model="config.test" required="">
+      </div>
+    </div>
   </div>
 
   <div>
       <input type="checkbox" ng-model="config.pourcent"> <label> Pourcentage </label>
   </div>
 
-  <div>
-    <label> Principal Data </label>
+  <div ng-if=config.pourcent>
+    <label class="sr-only" for="sample">Donnée</label>
+    <input type="text" class="form-control" ng-model="config.percentData" placeholder="Enter name of principal data" uib-typeahead ="key for key in config.keys" typeahead-min-length=0 autocomplete="off">
   </div>
 
-  <div class="form-inline padding-bottom">
-    <div class="form-group">
-      <label class="sr-only" for="desc">Description</label>
-      <input type="text" id="desc" class="form-control" ng-model="config.desc" placeholder="Enter Description of the data">
-    </div>
-    <div class="form-group">
-      <label class="sr-only" for="sample">Principal Data</label>
-      <input type="text" class="form-control" ng-model="config.root" placeholder="Enter name of principal data">
-    </div>
-  </div>
 
-  <div>
-    <label> Test </label>
-  </div>
-
-  <div class="form-inline padding-bottom">
-    <div class="form-group">
-      <label class="sr-only" for="op"> Operation </label>
-      <select class="form-group" id="op" ng-model="config.op" required="">
-        <option value="eq"> == </option>
-        <option value="sup"> > </option>
-        <option value="inf"> < </option>
-        <option value="dif"> != </option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label class="sr-only" for ="test"> Value </label>
-      <input type="text" id="test" class="form-control" placeholder="Test Value" ng-model="config.test" required="">
-    </div>
-  </div>
   <div class="form-group">
     <label ng-click="isCollapsed = !isCollapsed"> Paramètre Modal
       <span ng-hide="isCollapsed" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
       <span ng-show="isCollapsed" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
     </label>
   </div>
+
   <div ng-show="isCollapsed">
 
       <div >
@@ -84,75 +95,17 @@
           <label class="sr-only" for="path-{{$index}}">Path</label>
           <input type="text" id="path-{{$index}}" class="form-control" placeholder="Path" ng-model="col.path" required="">
         </div>
-        <button type="button" class="btn btn-warning" ng-click="cv.removeColumn($index)">
+        <button type="button" class="btn btn-warning" ng-click="cv.removeColumn(false, $index)">
           <i class="fa fa-minus"></i> Remove
         </button>
       </div>
 
-      <button type="button" class="btn btn-primary" ng-click="cv.addColumn()">
+      <button type="button" class="btn btn-primary" ng-click="cv.addColumn(false)">
         <i class="fa fa-plus"></i> Add
       </button>
   </div>
 
-  <div class="form-group">
-    <label ng-click="isCollapsed2 = !isCollapsed2"> Données Aditionnel
-      <span ng-hide="isCollapsed2" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
-      <span ng-show="isCollapsed2" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
-    </label>
-  </div>
-</div>
 
-<div ng-show="isCollapsed2">
-
-    <div class="form-inline padding-bottom">
-      <div >
-        <label class="sr-only"> Description donnée principale</label>
-        <input type="text" class="form-control" ng-model="config.descPrincipalData" placeholder="Donnée Principale">
-      </div>
-      <div >
-        <label class="sr-only"> Donnée Principale</label>
-        <input type="text" class="form-control" ng-model="config.principalData" placeholder="Donnée Principale">
-      </div>
-    </div>
-
-    <div>
-      <label>Column</label>
-    </div>
-
-    <div class="form-inline padding-bottom" ng-repeat="col in cv.config.additionalData">
-      <div class="form-group">
-        <label class="sr-only" for="title-{{$index}}">Title</label>
-        <input type="text" id="title-{{$index}}" class="form-control" placeholder="Title" ng-model="col.title" required="">
-      </div>
-      <div class="form-group">
-        <label class="sr-only" for="path-{{$index}}">Path</label>
-        <input type="text" id="path-{{$index}}" class="form-control" placeholder="Path" ng-model="col.path" required="">
-      </div>
-      <button type="button" class="btn btn-warning" ng-click="cv.removeColumn($index)">
-        <i class="fa fa-minus"></i> Remove
-      </button>
-    </div>
-
-    <button type="button" class="btn btn-primary" ng-click="cv.addColumn()">
-      <i class="fa fa-plus"></i> Add
-    </button>
-</div>
-
-<!-- MODE EXPERT -->
-
-<div>
-  <input type="checkbox" ng-model="expert"> Expert Mode
-</div>
-
-<div ng-show="expert">
-  <div class="form-group">
-    <label class="sr-only" for="database"> Database </label>
-    <input type="text" id="database" class="form-control" placeholder="Database" ng-model="config.database">
-  </div>
-  <div class="form-group">
-    <label class="sr-only" for="query">Query</label>
-    <textarea rows="3" id="query" class="form-control" placeholder="Query" ng-model="config.expert"></textarea>
-  </div>
-</div>
+  <input type="checkbox" ng-model="config.listener"> listener
 
 </form>
